get inventories of connected user
